--- a/cm/index.html
+++ b/cm/index.html
@@ -12,8 +12,8 @@
   <style>
     #whatever {
       position: fixed;
-      width: 200px;
-      height: 200px;
+      width: 100vw;
+      height: 100vw;
       top: 0;
       left: 0;
       background-color: yellow;
