--- a/cm/index.html
+++ b/cm/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>Birthday</title>
 
-  <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
-  <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+  <script src="a.js"></script>
+  <script src="b.js"></script>
 
   <style>
     #whatever {
