--- a/cm/index.html
+++ b/cm/index.html
@@ -18,7 +18,7 @@
       left: 0;
       background-color: yellow;
       z-index: 9999999;
-      display: none;
+      display: block;
     }
   </style>
   
