--- a/cm/index.html
+++ b/cm/index.html
@@ -12,11 +12,10 @@
   <style>
     #whatever {
       position: fixed;
-      width: 100vw;
-      height: 100vw;
-      top: 0;
+      width: 90vw;
+      height: 90vw;
+      top: 10%;
       left: 0;
-      background-color: yellow;
       z-index: 9999999;
       display: none;
     }
@@ -115,6 +114,9 @@
   </a-scene>
 
   <div id="whatever"></div>
+
+  <div class="whatever">
+    <img src="birthdaycard.gif">
 
   </body>
 
