--- a/cm/index.html
+++ b/cm/index.html
@@ -16,6 +16,7 @@
       height: 90vw;
       top: 10%;
       left: 0;
+      background-color: yellow;
       z-index: 9999999;
       display: none;
     }
@@ -117,6 +118,7 @@
 
   <div class="whatever">
     <img src="birthdaycard.gif">
+  </div>
 
   </body>
 
