--- a/cm/index.html
+++ b/cm/index.html
@@ -16,7 +16,7 @@
       height: 90vw;
       top: 10%;
       left: 0;
-      background-color: yellow;
+      background-color: transparent;
       z-index: 9999999;
       display: none;
     }
