--- a/cm/index.html
+++ b/cm/index.html
@@ -117,7 +117,7 @@
   <div id="whatever"></div>
 
   <div class="whatever">
-    <img src="birthdaycard.gif">
+    <img src="cm/birthdaycard.gif">
   </div>
 
   </body>
