--- a/cm/index.html
+++ b/cm/index.html
@@ -15,10 +15,10 @@
       width: 90vw;
       height: 90vw;
       top: 10%;
-      left: 0;
+      left: 10%;
       background-color: white;
       z-index: 9999999;
-      display: none;
+      display: block;
     }
 
     * {
