--- a/creativemediaexerciseone/index.html
+++ b/creativemediaexerciseone/index.html
@@ -18,14 +18,14 @@
 
       <a-nft
         type="nft"
-        url="hldar/christo"
+        url="marker.jpg"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
         smoothThreshold="50">
 
           <a-entity>
-            <a-image position="0 -20 -200" rotation="270 0 0" width="200" height="200" src="gday.png"></a-image>
+            <a-image position="0 -20 -200" rotation="270 0 0" width="200" height="200" src="creativemediaexerciseone/birthdaycard.gif"></a-image>
           </a-entity>
       </a-nft>
 
