--- a/cm/index.html
+++ b/cm/index.html
@@ -102,7 +102,7 @@
       <a-nft
       markerhandler
         type="nft"
-        url="cm/marker"
+        url=""
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
