--- a/creativemediaexerciseone/index.html
+++ b/creativemediaexerciseone/index.html
@@ -17,6 +17,7 @@
       arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
 
       <a-nft
+        markerhandler
         type="nft"
         url="creativemediaexerciseone/marker"
         smooth="true"
