--- a/cm/index.html
+++ b/cm/index.html
@@ -10,6 +10,8 @@
   <script src="b.js"></script>
 
   <style>
+    <style>
+  .birthday {
     #whatever {
       position: fixed;
       width: 90vw;
@@ -102,7 +104,7 @@
       <a-nft
       markerhandler
         type="nft"
-        url=""
+        url="cm/marker"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
@@ -114,10 +116,8 @@
   
   </a-scene>
 
-  <div id="whatever"></div>
-
-  <div class="whatever">
-    <img src="birthdaycard.gif">
+  <div id="whatever">
+    <img src="./cm/birthdaycard.gif">
   </div>
 
   </body>
