--- a/creativemediaexerciseone/index.html
+++ b/creativemediaexerciseone/index.html
@@ -31,7 +31,7 @@
       <a-nft
         markerhandler
         type="nft"
-        url="creativemediaexerciseone/marker"
+        url=""
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
