--- a/cm/index.html
+++ b/cm/index.html
@@ -11,7 +11,6 @@
 
   <style>
     <style>
-  .birthday {
     #whatever {
       position: fixed;
       width: 90vw;
@@ -104,7 +103,7 @@
       <a-nft
       markerhandler
         type="nft"
-        url="cm/marker"
+        url="marker"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
