--- a/cm/index.html
+++ b/cm/index.html
@@ -103,7 +103,7 @@
       <a-nft
       markerhandler
         type="nft"
-        url="marker"
+        url="cm/marker.jpg"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
