--- a/cm/index.html
+++ b/cm/index.html
@@ -19,9 +19,9 @@
       left: 10%;
       background-color: white;
       z-index: 9999999;
-      display: block;
+      display: none;
     }
-
+    
     * {
         margin:  0;
         padding: 0;
@@ -79,7 +79,7 @@
            this.el.addEventListener('markerFound', () => {
              var check = this.el.getAttribute("url");
              // alert(check);
-             document.getElementById('whatever').style.display = "block";
+             document.getElementById('whatever').style.display = "cm/birthdaycard";
            });
            
            this.el.addEventListener('markerLost', () => {
@@ -101,9 +101,9 @@
       arjs="trackingMethod: best; sourceType: webcam;debugUIEnabled: false;">
 
       <a-nft
-      markerhandler
+        markerhandler
         type="nft"
-        url="cm/marker.jpg"
+        url="cm/marker"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
@@ -116,7 +116,7 @@
   </a-scene>
 
   <div id="whatever">
-    <img src="./cm/birthdaycard.gif">
+    <img src="cm/birthdaycard">
   </div>
 
   </body>
