--- a/cm/index.html
+++ b/cm/index.html
@@ -19,7 +19,7 @@
       left: 10%;
       background-color: white;
       z-index: 9999999;
-      display: none;
+      display: block;
     }
 
     .card {
