--- a/cm/index.html
+++ b/cm/index.html
@@ -109,7 +109,7 @@
       <a-nft
         markerhandler
         type="nft"
-        url="cm/marker"
+        url="./cm/marker.jpg"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
@@ -122,7 +122,7 @@
   </a-scene>
 
   <div id="whatever">
-    <img class="card" src="cm/birthdaycard">
+    <img class="card" src="./cm/birthdaycard.gif">
   </div>
 
   </body>
