--- a/cm/index.html
+++ b/cm/index.html
@@ -85,7 +85,7 @@
            this.el.addEventListener('markerFound', () => {
              var check = this.el.getAttribute("url");
              // alert(check);
-             document.getElementById('whatever').style.display = "cm/birthdaycard";
+             document.getElementById('whatever').style.display = "block";
            });
            
            this.el.addEventListener('markerLost', () => {
