--- a/cm/index.html
+++ b/cm/index.html
@@ -122,7 +122,7 @@
   </a-scene>
 
   <div id="whatever">
-    <img class="card" src="./cm/birthdaycard.gif">
+    <img class="card" src="birthdaycard.gif">
   </div>
 
   </body>
