--- a/cm/index.html
+++ b/cm/index.html
@@ -23,7 +23,7 @@
     }
 
     .card {
-      position: fixed;
+      position: relative;
       width: 100vw;
       height: 100vw;
     }
@@ -109,7 +109,7 @@
       <a-nft
         markerhandler
         type="nft"
-        url="./cm/marker.jpg"
+        url="marker.jpg"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
