--- a/cm/index.html
+++ b/cm/index.html
@@ -24,8 +24,8 @@
 
     .card {
       position: relative;
-      width: 100vw;
-      height: 100vw;
+      width: 100%;
+      height: 100%;
     }
     
     * {
@@ -109,7 +109,7 @@
       <a-nft
         markerhandler
         type="nft"
-        url="marker.jpg"
+        url="marker"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
