--- a/cm/index.html
+++ b/cm/index.html
@@ -109,7 +109,7 @@
       <a-nft
         markerhandler
         type="nft"
-        url="marker"
+        url="cm/marker"
         smooth="true"
         smoothCount="100"
         smoothTolerance=".1"
