--- a/cm/index.html
+++ b/cm/index.html
@@ -96,9 +96,7 @@
    </script>
 
   </head>
-  <body style="margin: 0px; overflow: hidden;" onload="document.getElementById('xx').style.display='none'">
-    <div id="xx" class="xx-loader"><div>Loading, please wait...</div></div>
-    <div class="arjs-loader"><div>Loading, please wait...</div></div>
+  <body style="margin: 0px; overflow: hidden;">
 
     <a-scene
     vr-mode-ui="enabled: false;"
