--- a/cm/index.html
+++ b/cm/index.html
@@ -17,7 +17,7 @@
       height: 100vw;
       top: 10%;
       left: 10%;
-      background-color: white;
+      background-color: yellow;
       z-index: 9999999;
       display: block;
     }
@@ -34,6 +34,7 @@
         box-sizing: border-box;
         font-size: 15px;
       }
+    
       .arjs-loader {
         height: 100%;
         width: 100%;
@@ -121,7 +122,9 @@
   
   </a-scene>
 
-  <div id="whatever">
+  <div id="whatever"></div>
+
+    <div class="whatever">
     <img class="card" src="birthdaycard.gif">
   </div>
 
