--- a/cm/index.html
+++ b/cm/index.html
@@ -12,19 +12,11 @@
   <style>
     #whatever {
       position: fixed;
-      width: 100vw;
-      height: 100vw;
-      top: 15%;
-      left: 0%;
-      background-color: yellow;
-      z-index: 9999999;
-      display: block;
-    }
-
-    .card {
-      position: relative;
       width: 100%;
       height: 100%;
+      top: 15%;
+      left: 0%;
+      z-index: 9999999;
     }
     
     * {
@@ -121,12 +113,9 @@
   
   </a-scene>
 
-  <div id="whatever"></div>
+  <div id="whatever" src="birthdaycard.gif"></div>
 
-  <div class="whatever">
-    <img class="card" src="birthdaycard.gif">
-  </div>
-
+    
   </body>
 
   </html>
