--- a/cm/index.html
+++ b/cm/index.html
@@ -114,9 +114,7 @@
   
   </a-scene>
 
-  <div id="whatever"></div>
-
-  <div class="whatever">
+  <div id="whatever">
     <img src="birthdaycard.gif">
   </div>
   
