--- a/cm/index.html
+++ b/cm/index.html
@@ -21,6 +21,12 @@
       display: block;
     }
 
+    .card {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+
     * {
         margin:  0;
         padding: 0;
@@ -115,7 +121,7 @@
   </a-scene>
 
   <div id="whatever">
-    <img src="birthdaycard.gif">
+    <img class="card" src="birthdaycard.gif">
   </div>
   
   </body>
