--- a/cm/index.html
+++ b/cm/index.html
@@ -14,9 +14,9 @@
       position: fixed;
       width: 90vw;
       height: 90vw;
-      top: 10%;
-      left: 0;
-      background-color: yellow;
+      top: 20%;
+      left: 10%;
+      opacity: .0;
       z-index: 9999999;
       display: block;
     }
