--- a/cm/index.html
+++ b/cm/index.html
@@ -12,11 +12,11 @@
   <style>
     #whatever {
       position: fixed;
-      width: 90vw;
-      height: 90vw;
-      top: 20%;
+      width: 100vw;
+      height: 100vw;
+      top: 10%;
       left: 10%;
-      opacity: .0;
+      background-color: white;
       z-index: 9999999;
       display: block;
     }
