--- a/cm/index.html
+++ b/cm/index.html
@@ -14,7 +14,8 @@
       position: fixed;
       width: 100vw;
       height: 100vw;
-      top: 10%;
+      top: 15%;
+      right: 10%;
       background-color: white;
       z-index: 9999999;
       display: block;
