--- a/cm/index.html
+++ b/cm/index.html
@@ -17,6 +17,7 @@
       top: 15%;
       left: 0%;
       background-color: white;
+      opacity: .0;
       z-index: 9999999;
       display: block;
     }
