--- a/cm/index.html
+++ b/cm/index.html
@@ -16,8 +16,7 @@
       height: 100vw;
       top: 15%;
       left: 0%;
-      background-color: white;
-      opacity: 0;
+      color: rgba(255, 255, 255, 0);
       z-index: 9999999;
       display: block;
     }
