--- a/cm/index.html
+++ b/cm/index.html
@@ -4,7 +4,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-  <title>Birthday</title>
+  <title>Happy Birthday</title>
 
   <script src="a.js"></script>
   <script src="b.js"></script>
@@ -121,7 +121,7 @@
   </a-scene>
 
   <div id="whatever">
-    <img class="card" src="birthdaycard.gif">
+    <img class="card" src="duck.gif">
   </div>
   
   </body>
