--- a/cm/index.html
+++ b/cm/index.html
@@ -18,7 +18,7 @@
       left: 0%;
       color: rgba(255, 255, 255, 0);
       z-index: 9999999;
-      display: block;
+      display: none;
     }
 
     .card {
