--- a/cm/index.html
+++ b/cm/index.html
@@ -121,7 +121,7 @@
   </a-scene>
 
   <div id="whatever">
-    <img class="card" src="duck.gif">
+    <img class="card" src="duck.gif" data-audio="birthdaybeats.mp3">
   </div>
   
   </body>
