--- a/cm/index.html
+++ b/cm/index.html
@@ -123,12 +123,15 @@
   
   </a-scene>
 
-  <audio src=""></audio>
 
   <div id="whatever">
     <img class="card" src="duck.gif" data-audio="birthdaybeats.mp3">
   </div>
-  
+    
   </body>
-
+  
+  <script>
+    const audioPlayer = document.querySelector('audio')
+  </script>
+  
   </html>
