--- a/cm/index.html
+++ b/cm/index.html
@@ -122,12 +122,10 @@
   
   </a-scene>
 
-  <audio id="haha" controls autoplay>
-    <source src="birthaybeats.mp3" type="audio/mpeg">
-  </audio>
+  <audio src=""></audio>
 
   <div id="whatever">
-    <img class="card" src="duck.gif">
+    <img class="card" src="duck.gif" data-audio="birthdaybeats.mp3">
   </div>
     
   </body>
