--- a/cm/index.html
+++ b/cm/index.html
@@ -122,10 +122,12 @@
   
   </a-scene>
 
-  <audio src=""></audio>
+  <audio id="haha">
+    <source src="birthaybeats.mp3" type="audio/mpeg">
+  </audio>
 
   <div id="whatever">
-    <img class="card" src="duck.gif" data-audio="birthdaybeats.mp3">
+    <img class="card" src="duck.gif">
   </div>
     
   </body>
