--- a/cm/index.html
+++ b/cm/index.html
@@ -123,7 +123,7 @@
   </a-scene>
 
   <audio id="haha">
-    <source src="birthaybeats.mp3" type="audio/mpeg">
+    <source src="birthdaybeats.mp3" type="audio/mpeg">
   </audio>
 
   <div id="whatever">
